Tue Oct 27 08:22:25 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_tiger.GNU:

          fixed typo.

Tue Oct 27 08:12:25 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-snowleopard.h:
        * include/makeinclude/platform_macosx_common.GNU:
        * include/makeinclude/platform_macosx_snowleopard.GNU:
        * include/makeinclude/platform_macosx_tiger.GNU:

          Re-factored snow leopard support, I now get a clean compile.
          Tests will be evaluated when we get our x86 Mac hardware.

        * tests/Message_Queue_Test.cpp:

          Introduced some pointer gymnastics to convert a ACE_thread_t
          to a seed for the random number generator.  This was done to avoid
          compile warnings due to pointers being bigger than a uint_t and losing
          precision in the conversion.

Tue Oct 27 07:55:38 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Use ACE_INVALID_HANDLE instead of -1. Changed C-style casts
          to C++ casts.

Mon Oct 26 22:08:38 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-win32-borland.h:
          Added ACE_FILENO_EQUIVALENT.

Mon Oct 26 15:42:34 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Added cast to fix compile error on Windows.

Mon Oct 26 12:25:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.inl:
          Fix for msvc10

Mon Oct 26 11:54:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Small improvement for PPC64

Mon Oct 26 10:41:43 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * protocols/ace/HTBP/HTBP_Inside_Squid_Filter.cpp:
        * protocols/ace/HTBP/HTBP_Session.h:
        * protocols/ace/HTBP/HTBP_Environment.cpp:
        * protocols/ace/HTBP/HTBP_Channel.h:
        * protocols/ace/HTBP/HTBP_Filter_Factory.h: