@@ -1,3 +1,9 @@
+Tue Oct 27 10:01:51 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * ace/OS_NS_string.cpp:
+        * ace/config-aix-5.x.h:
+          strsignal fix for AIX.
+
 Tue Oct 27 08:22:25 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * include/makeinclude/platform_macosx_tiger.GNU:
